--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ yarn-debug.log*
 yarn-error.log*
 contract/target
 integration-tests/target
+frontend/.parcel-cache
+frontend/dist
+contract/neardev/dev-account*
