--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "cd contract && cargo test",
     "test:integration": "npm run build:contract && cd integration-tests && cargo run --example integration-tests \"../contract/target/wasm32-unknown-unknown/release/hello_near.wasm\"",
+    "near:login": "near login",
     "postinstall": "cd frontend && npm install && cd .."
   },
   "devDependencies": {
