--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello_near"
+name = "hotel_booking"
 version = "1.0.0"
 authors = ["Near Inc <hello@near.org>"]
 edition = "2021"
