--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "near:create": "near create-account $SUB_ACCOUNT_NAME.$MY_CONTRACT_NAME --masterAccount $MY_CONTRACT_NAME --initialBalance 5",
     "near:delete": "near delete $CONTRACT_NAME $MY_CONTRACT_NAME",
     "near:view:get_rooms_registered_by_owner": "near view $CONTRACT_NAME get_rooms_registered_by_owner '{\"owner_id\": \"'$MY_CONTRACT_NAME'\"}' --accountId $MY_CONTRACT_NAME",
-    "near:exists": "near view $CONTRACT_NAME exists '{\"owner_id\": \"'$MY_CONTRACT_NAME'\", \"room_name\": \"Sun Room\"}' --accountId $MY_CONTRACT_NAME",
+    "near:view:exists": "near view $CONTRACT_NAME exists '{\"owner_id\": \"'$MY_CONTRACT_NAME'\", \"room_name\": \"Sun Room\"}' --accountId $MY_CONTRACT_NAME",
+    "near:view:get_booking_info_for_owner": "near view $CONTRACT_NAME get_booking_info_for_owner '{\"owner_id\": \"'$MY_CONTRACT_NAME'\"}'",
+    "near:view:get_booking_info_for_guest": "near view $CONTRACT_NAME get_booking_info_for_guest '{\"guest_id\": \"'$MY_CONTRACT_NAME'\"}'",
     "near:call:add_room_to_owner": "near call $CONTRACT_NAME add_room_to_owner '{\"name\": \"Sun Room\", \"image\": \"URL\", \"beds\": 1, \"description\": \"This is Sun room.\", \"location\": \"Tokyo\", \"price\": \"1000000000000000000000000\"}' --accountId $MY_CONTRACT_NAME",
+    "near:call:get_available_rooms": "near call $CONTRACT_NAME get_available_rooms '{\"room_id\": \"'$MY_CONTRACT_NAME' Room\", \"check_in_date\": \"2222-01-01\"}' --accountId $MY_CONTRACT_NAME",
+    "near:call:book_room": "near call $CONTRACT_NAME book_room '{\"room_id\": \"'$MY_CONTRACT_NAME'Sun Room\", \"check_in_date\": \"2222-01-01\"}' --depositYocto=1000000000000000000000000 --accountId $MY_CONTRACT_NAME",
+    "near:call:change_status_to_stay": "near call $CONTRACT_NAME change_status_to_stay '{\"room_id\": \"'$MY_CONTRACT_NAME'Sun Room\", \"check_in_date\": \"2222-01-01\"}' --accountId $MY_CONTRACT_NAME",
+    "near:call:change_status_to_available": "near call $CONTRACT_NAME change_status_to_available '{\"room_id\": \"'$MY_CONTRACT_NAME'Sun Room\", \"check_in_date\": \"2222-01-01\", \"guest_id\": \"'$MY_CONTRACT_NAME'\"}' --accountId $MY_CONTRACT_NAME",
     "postinstall": "cd frontend && npm install && cd ..",
     "env:dev": "dotenv-run-script ./dev.env ./contract/neardev/dev-account.env --"
   },
