--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,19 +12,15 @@
     "@babel/preset-react": "^7.17.12",
     "@types/node": "^18.6.2",
     "ava": "^4.2.0",
-    "react-test-renderer": "^18.1.0",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2",
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.16",
     "parcel": "^2.6.0",
     "process": "^0.11.10",
-    "env-cmd": "^10.1.0"
+    "react-test-renderer": "^18.1.0",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.2"
   },
   "dependencies": {
-    "near-api-js": "^0.44.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "regenerator-runtime": "^0.13.9",
     "@near-wallet-selector/core": "^6.0.0",
     "@near-wallet-selector/ledger": "^6.0.0",
     "@near-wallet-selector/math-wallet": "^6.0.0",
@@ -35,7 +31,15 @@
     "@near-wallet-selector/nightly": "^6.0.0",
     "@near-wallet-selector/nightly-connect": "^6.0.0",
     "@near-wallet-selector/sender": "^6.0.0",
-    "@near-wallet-selector/wallet-connect": "^6.0.0"
+    "@near-wallet-selector/wallet-connect": "^6.0.0",
+    "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
+    "near-api-js": "^0.44.2",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "regenerator-runtime": "^0.13.9"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
