--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,10 @@
     "@near-wallet-selector/nightly-connect": "^6.0.0",
     "@near-wallet-selector/sender": "^6.0.0",
     "@near-wallet-selector/wallet-connect": "^6.0.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "form-data": "^4.0.0",
     "near-api-js": "^0.44.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
